Collada export crashes #34051

Closed
opened 2013-01-30 14:56:51 +01:00 by Martin Wolkenreiter · 6 comments

%%%--- Operating System, Graphics card ---

Windows 7, 64bit
AMD Radeon HD5770
AMD Phenom II X4 955BE
12GB RAM

- Blender version with error, and version that worked ---

2.65a and latest development build fail, no working version known.

- Short description of error ---

Blender crashes when trying to export a rigged mesh along with the armature. Exporting the armature or the mesh alone works, though. No meaningful feedback on system console on the error. Minimal example to reproduce the error attached to the report.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Select "CollarExp" object, export to Collada (default), "selection only" and "include armatures" checked.

or...

Select the object and the armature, export with "selection only".
%%%

%%%--- Operating System, Graphics card --- Windows 7, 64bit AMD Radeon HD5770 AMD Phenom II X4 955BE 12GB RAM - Blender version with error, and version that worked --- 2.65a and latest development build fail, no working version known. - Short description of error --- Blender crashes when trying to export a rigged mesh along with the armature. Exporting the armature or the mesh alone works, though. No meaningful feedback on system console on the error. Minimal example to reproduce the error attached to the report. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Select "CollarExp" object, export to Collada (default), "selection only" and "include armatures" checked. or... Select the object and the armature, export with "selection only". %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Any news on that? Could you reproduce the problem? If so, is there anything I could from my side until a "real" fix is available? Help would be appreciated, thanks :)%%%

%%%Any news on that? Could you reproduce the problem? If so, is there anything I could from my side until a "real" fix is available? Help would be appreciated, thanks :)%%%

%%%Getting more crashes with other projects using the same armature... I would appreciate any feedback if the bug is confirmed or if I should keep looking for problems on my side of things... Thanks%%%

%%%Getting more crashes with other projects using the same armature... I would appreciate any feedback if the bug is confirmed or if I should keep looking for problems on my side of things... Thanks%%%
Member

%%%Fixed in svn 54387%%%

%%%Fixed in svn 54387%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34051
No description provided.