fix: #34051 Collada export crashes